--- a/prompt/frontend/package.json
+++ b/prompt/frontend/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-wavify": "^1.11.1",
+    "reactflow": "^11.11.4",
     "router": "^1.3.8",
     "sketch-js": "^1.1.3"
   },
